# BiliBiliLiveRobot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cli.cpp  gui.cpp  main.cpp  test.json
Base/: Logger.cpp  Logger.h  TimeStamp.cpp  TimeStamp.h  copyable.h  noncopyable.h
Bili/: BiliApiUtil.cpp  BiliApiUtil.h  BiliCookie.cpp  BiliCookie.h  BiliLiveSession.cpp  BiliLiveSession.h  BiliLogin.cpp  BiliLogin.h  BiliRequestHeader.cpp  BiliRequestHeader.h
Config/: configure.json
Entity/: BiliCookie.cpp  BiliCookie.h  BiliLiveSession.cpp  BiliLiveSession.h  BiliRequestHeader.cpp  BiliRequestHeader.h  Config.cpp  Config.h  Url.cpp  Url.h
Entity/BiliEntity/: BiliCommandFactory.cpp  BiliCommandFactory.h  User.cpp  User.h
Entity/BiliEntity/Command/: BiliLiveCommandAnchorLotEnd.cpp  BiliLiveCommandAnchorLotEnd.h  BiliLiveCommandAnchorLotStart.cpp  BiliLiveCommandAnchorLotStart.h  BiliLiveCommandBase.cpp  BiliLiveCommandBase.h  BiliLiveCommandDanmu.cpp  BiliLiveCommandDanmu.h  BiliLiveCommandEntryEffect.cpp  BiliLiveCommandEntryEffect.h  BiliLiveCommandGuardBlindBox.cpp  BiliLiveCommandGuardBlindBox.h  BiliLiveCommandGuardBuy.cpp  BiliLiveCommandGuardBuy.h  BiliLiveCommandInteractWord.cpp  BiliLiveCommandInteractWord.h  BiliLiveCommandLive.cpp  BiliLiveCommandLive.h  BiliLiveCommandPKStart.cpp  BiliLiveCommandPKStart.h  BiliLiveCommandPreparing.cpp  BiliLiveCommandPreparing.h  BiliLiveCommandRedPocketEnd.cpp  BiliLiveCommandRedPocketEnd.h  BiliLiveCommandRedPocketStart.cpp  BiliLiveCommandRedPocketStart.h  BiliLiveCommandSendGift.cpp  BiliLiveCommandSendGift.h  BiliLiveCommandSuperChat.cpp  BiliLiveCommandSuperChat.h  danmu.json
Entity/DataBase/: DataBase.cpp  DataBase.h
Entity/EntityPool/: EntityPool.cpp  EntityPool.h
Entity/Global/: Config.cpp  Config.h  Logger.cpp  Logger.h  MessageDeque.cpp  MessageDeque.h  PlatformDefine.h  TimeStamp.cpp  TimeStamp.h  Url.cpp  Url.h
Entity/MessageDeque/: MessageDeque.cpp  MessageDeque.h
Entity/Net/: Multipart.cpp  Multipart.h  Url.cpp  Url.h
Entity/Robot/: Robot.cpp  Robot.h
Entity/ThreadPool/: ProcessingMessageThreadPool.cpp  ProcessingMessageThreadPool.h
GUI/: BilibiliApi.cpp  BilibiliApi.h  DanmakuModel.cpp  DanmakuModel.h  SettingsManager.cpp  SettingsManager.h  TTSManager.cpp  TTSManager.h
GUI/qml/: BlindboxPage.qml  DanmakuPage.qml  GiftPage.qml  InteractionPage.qml  LoginInfoPage.qml  LoginPage.qml  MainPage.qml  PKPage.qml  SettingsPage.qml  Sidebar.qml  StatsPage.qml  WelcomePage.qml  main.qml  qmldir
GUI/qml/components/: DanmakuMessage.qml  StatsCard.qml  ToggleSwitch.qml
ThreadPool/: ProcessingMessageThreadPool.cpp  ProcessingMessageThreadPool.h
Util/: BiliApiUtil.cpp  BiliApiUtil.h  BiliLogin.cpp  BiliLogin.h
Util/BiliUtil/: BiliApiUtil.cpp  BiliApiUtil.h  BiliCookie.cpp  BiliLiveSession.cpp  BiliLiveSession.h  BiliLogin.cpp  BiliLogin.h  BiliRequestHeader.cpp  BiliRequestHeader.h  BiliRoomInfo.cpp  BiliRoomInfo.h
Util/ZstdUtil/: ZstdUtil.cpp  ZstdUtil.h
qml/: main.qml  qtquickcontrols2.conf
